--- a/scss/viralcss.scss
+++ b/scss/viralcss.scss
@@ -9,8 +9,7 @@
 @import 'variables';
 
 body { 
-  margin: 0; 
-  background-color: $badass; 
+  background-color: $background; 
 }
 
 @import 'container';
