--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,5 +3,38 @@
 // This source code is licensed under the MIT license found in the
 // LICENSE file in the root directory of this source tree.
 
-$background: #FDFFFC;
 $padding: 10px;
+$maxWidth: 100%;
+
+$gutterWidth: 10px;
+
+// FONT
+$font: 'Raleway', sans-serif;;
+
+
+// COLORS
+$lightOrange: #e29d69;
+$white: #fffdf9;    
+$orange: #ff843c;    
+$slate: #7aa3b7;
+$blue: #35d3f2;    
+
+$background: #eee;
+$backgroundGradient: linear-gradient(135deg, #b04, #f80) fixed;
+
+
+// GRID
+$columnCount: 12;
+
+$oneWide        : (1 / $columnCount * 100%);
+$twoWide        : (2 / $columnCount * 100%);
+$threeWide      : (3 / $columnCount * 100%);
+$fourWide       : (4 / $columnCount * 100%);
+$fiveWide       : (5 / $columnCount * 100%);
+$sixWide        : (6 / $columnCount * 100%);
+$sevenWide      : (7 / $columnCount * 100%);
+$eightWide      : (8 / $columnCount * 100%);
+$nineWide       : (9 / $columnCount * 100%);
+$tenWide        : (10 / $columnCount * 100%);
+$elevenWide     : (11 / $columnCount * 100%);
+$twelveWide     : (12 / $columnCount * 100%);
