--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -7,6 +7,7 @@ $padding: 10px;
 $maxWidth: 100%;
 
 $gutterWidth: 30px;
+$lineHeight: 1.42857143;
 
 // FONT
 $font: 'Raleway', sans-serif;;
@@ -19,7 +20,7 @@ $orange: #ff843c;
 $slate: #7aa3b7;
 $blue: #35d3f2;    
 
-$background: #eee;
+$background: #fff;//#eee;
 $backgroundGradient: linear-gradient(135deg, #b04, #f80) fixed;
 
 
